# mwlab

./: .gitignore  LICENSE  README.md  cauchy_method.py  cm_extract_api.py  common.py  configs.py  default.yml  inference.py  losses.py  main.py  models.py  optimize.py  phase.py  prepare_old_mw_filter_data.py  pyproject.toml  refinement.py  requirements.txt  sensivity.py  utils.py
Data/Filter12/: 001_Sprms.s2p  002_Sprms.s2p  003_Sprms.s2p  004_Sprms.s2p  005_Sprms.s2p  006_Sprms.s2p  007_Sprms.s2p  008_Sprms.s2p  009_Sprms.s2p  010_Sprms.s2p  011_Sprms.s2p  012_Sprms.s2p  013_Sprms.s2p  014_Sprms.s2p  015_Sprms.s2p  016_Sprms.s2p  017_Sprms.s2p  018_Sprms.s2p  019_Sprms.s2p  020_Sprms.s2p  021_Sprms.s2p  022_Sprms.s2p  023_Sprms.s2p  024_Sprms.s2p  025_Sprms.s2p  026_Sprms.s2p  027_Sprms.s2p  028_Sprms.s2p  029_Sprms.s2p  030_Sprms.s2p  031_Sprms.s2p  032_Sprms.s2p  033_Sprms.s2p  034_Sprms.s2p  035_Sprms.s2p  036_Sprms.s2p  037_Sprms.s2p  038_Sprms.s2p  039_Sprms.s2p  040_Sprms.s2p  (+159 more)
data_gen/: cst_funcs.py  examples.py  main.py  utils.py
datasets_generator/: cst_funcs.py  examples.py  main.py  test.py  utils.py
defaults_cfg/: phase_extractor_coarse_default.yml  phase_extractor_fine_default.yml
examples/01_io/: Sprms.s2p  free.py  (+5 more)
filters/: __init__.py  main.py  mwfilter.py  prepare_old_mw_filter_data.py
mwlab/: __init__.py  datasets.py  fileio.py  touchstone.py
tests/: conftest.py  test_base_lm.py  test_base_lm_with_metrics.py  test_box_finder.py  test_cli_pack_dataset.py  test_cm.py  test_cm_core.py  test_cm_io.py  test_cm_schema.py  test_devices.py  test_doe.py  test_file_backend.py  test_hdf5_backend.py  test_in_memory_backend.py  test_objectives.py  test_scalers.py  test_sensitivity.py  test_surrogates.py  test_topologies.py  test_touchstone_analyzer.py  test_touchstone_codec.py  test_touchstone_data.py  test_touchstone_dataset.py  test_touchstone_dataset_transforms.py  test_touchstone_extras.py  test_touchstone_io.py  test_touchstone_ldm.py  test_touchstone_tensor_dataset.py  test_touchstonefile.py
(+1293 files in other folders)
