[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mwlab"
version = "0.1.2"
description = "Библиотека для проектирования СВЧ-устройств"
authors = [{ name = "Andrey Izotov", email = "andrey.iztv@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }

# Основные зависимости
dependencies = [
    "numpy >=2.0",
    "scikit-rf >=0.30",
    "lightning >=2.1",
    "torch >=1.13",
    "matplotlib >=3.4",
    "seaborn >=0.11",
    "pandas >=1.3",
    "xarray >=0.18",
    "h5py >=3.6",
]

[project.optional-dependencies]
# Для разработки и тестирования
dev = [
    "pytest >=7.0",
]

# Для проектирования экспериментов (DOE)
doe = [
    "pyDOE2 >=1.3"
]

# Для анализа чувствительности и поиска допусков параметров устройств
analysis = [
    "SALib>=1.4",
    "lightgbm",
    "catboost"
]

[tool.setuptools.packages.find]
where = ["mwlab"]
